--- a/index.html
+++ b/index.html
@@ -28,42 +28,46 @@
         <img src = "images/arrow2.png" alt = "Photo of the one and only Camryn Lee" id = "headshot">
         <h1 class = "intro" id = "hey-there">Hey there,</h1>
         <h2 class = "intro" id = "Camryn">I'm Camryn</h2>
-        <h4 id = "bio"> I'm a student majoring in CS + GGIS at UIUC. I hope to enter the tech industry as a Software Developer with a focus in AI and Geographic Spatial Analysis. In my free time I like to do origami, play Stardew Valley, listen to music, and go cafe hopping.  </h4>
+        <h4 id = "bio"> Im a student majoring in CS + GGIS at UIUC. I hope to enter the tech industry as a Software Developer with a focus in AI and Geographic Spatial Analysis. In my free time I like to do origami, play Stardew Valley, listen to music, and go cafe hopping.  </h4>
     </main>
 
     <div id = "projects" >
         <h1 class = "header">Projects</h1>
-        <div class = "project-container" id = "honors124">
-            <h1 class = "project-title">AI Sentimental Analysis</h1>
-            
-        </div>
-        <div class = "project-container" id = "wand">
-            <h1 class = "project-title">VR Game & Wand</h1>
-        </div>
-
+        <div class = "project-container">
         <div class="card">
             <div class="card-image-container">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="1em"
-                height="1em"
-                viewBox="0 0 1024 1024"
-                stroke-width="0"
-                fill="currentColor"
-                stroke="currentColor"
-                class="image-icon"
-              >
-                <path
-                  d="M928 160H96c-17.7 0-32 14.3-32 32v640c0 17.7 14.3 32 32 32h832c17.7 0 32-14.3 32-32V192c0-17.7-14.3-32-32-32zM338 304c35.3 0 64 28.7 64 64s-28.7 64-64 64-64-28.7-64-64 28.7-64 64-64zm513.9 437.1a8.11 8.11 0 0 1-5.2 1.9H177.2c-4.4 0-8-3.6-8-8 0-1.9.7-3.7 1.9-5.2l170.3-202c2.8-3.4 7.9-3.8 11.3-1 .3.3.7.6 1 1l99.4 118 158.1-187.5c2.8-3.4 7.9-3.8 11.3-1 .3.3.7.6 1 1l229.6 271.6c2.6 3.3 2.2 8.4-1.2 11.2z"
-                ></path>
-              </svg>
+                <img
+                src="images/eMotive.png"
+                alt="eMotive Logo"
+                class="card-image"
+              />
             </div>
-            <p class="card-title">eMotives</p>
+            <p class="card-title">eMotive</p>
             <p class="card-des">
-                Trained LLMs to take user inputs and output emotional values scaled by percent of core emotions
-                Utilized Python and SQL database to save inputs and continue training model for future accuracy
+                eMotive is a AI based website coded primarily in Python. 
+                To achieve accurate and usable results the LLM was trained to take user inputs and output emotional values scaled by percent of core emotions. 
+                This site also features a SQL database to save inputs and continue training model for future accuracy.
             </p>
           </div>
+          <div class="card">
+            <div class="card-image-container">
+                <img
+                src="images/Skylines.png"
+                alt="eMotive Logo"
+                class="card-image"
+              />
+            </div>
+            <p class="card-title">Skylines</p>
+            <p class="card-des">
+                Skylines is a API based website coded in Javascript and utilizes NoSQL to connect to MongoDb. 
+                The purpose for this website is to be able to serve a better way of giving recommendations of flights that may be affordable and have concise interface for filtering out the best flight for the user.
+                This site features a star review system, a dynamic and easily readable display for output plane tickets and a user friendly filter system for a more user-specific plane ride. 
+            </p>
+            <!-- <div class = "skills-used">
+                <h5>word</h5>
+            </div> -->
+          </div>
+        </div>
     </div>
 
     
