--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <h4 id = "bio"> Im a student majoring in CS + GGIS at UIUC. I hope to enter the tech industry as a Software Developer with a focus in AI and Geographic Spatial Analysis. In my free time I like to do origami, play Stardew Valley, listen to music, and go cafe hopping.  </h4>
     </main>
 
-    <div id = "projects" >
+    <div id = "projects">
         <h1 class = "header">Projects</h1>
         <div class = "project-container">
         <div class="card">
@@ -72,9 +72,9 @@
 
     
     <div id = "timeline">
-        <h1 id = "timeline-header"> Education </h1>
+        <h1 id = "timeline-header"> History of Me </h1>
         <p class = "dates">2020-2024</p>
-        <p class = "details">2020-2024</p>
+        <p class = "details">Highschool</p>
     </div>
 
 
